--- a/doc/fr/manuel.tex
+++ b/doc/fr/manuel.tex
@@ -62,11 +62,11 @@ D'autres navigateurs peuvent également être compatibles avec l'interface du si
 
 \subsection{Enregistrement et chargement}
 
-\paragraph{\textbf{\color{red}{Note importante :}}} \textbf{\color{red}{Le serveur ne réalise \emph{aucune} sauvegarde de votre code ou de vos données. Il est de \emph{votre} responsabilité de télécharger le fichier contenant votre code à chaque fois que vous quittez la session de simulation ou fermez votre navigateur.}}
+\paragraph{\textbf{\color{red}{Note importante :}}} \textbf{\color{red}{Le serveur sauvegarde automatiquement votre code, mais il n'y a aucune garantie que celui-ci sera conservé après avoir quitté la session de simulation. Il est de \emph{votre} responsabilité de télécharger le fichier contenant votre code à chaque fois que vous quittez la session de simulation ou fermez votre navigateur.}}
 
 \section{Utilisation du simulateur}
 
-La page d'accueil du simulateur est présentée à la figure \ref{f:accueil}. Elle contient, sur la gauche, un menu permettant de choisir le type d'activité (démonstrations, exercices, travaux pratiques ou codage libre) et, dans sa section principale, une liste des programmes disponibles.
+La page d'accueil du simulateur est présentée à la figure \ref{f:accueil}. Elle contient, sur la gauche, un menu permettant de choisir le type d'activité (démonstrations, exercices, travaux pratiques ou simulation libre) et, dans sa section principale, une liste des programmes disponibles.
 
 \begin{figure}
 \raggedleft
@@ -112,15 +112,16 @@ Passer la souris sur ce X fait apparaître une infobulle contenant un texte expl
 \caption{Le message expliquant l'erreur peut être consulté en passant la souris sur le X.}
 \end{figure}
 
-Une fois le programme \emph{assemblé} (le bouton ``Démarrer'' pressé et le code assemblé sans erreur), il est possible de mettre en place des points d'arrêt (\textit{breakpoints}) en cliquant sur le numéro d'une ligne. Un point d'arrêt force le simulateur à s'arrêter lorsqu'il l'atteint. Un point d'arrêt peut être désactivé en recliquant sur le même numéro de ligne. Par exemple, dans la figure suivante, les lignes 20 et 22 sont des points d'arrêt :
+
+Il est possible de mettre en place des points d'arrêt (\textit{breakpoints}) en cliquant sur le numéro d'une ligne. Un point d'arrêt force le simulateur à s'arrêter lorsqu'il l'atteint. Un point d'arrêt peut être désactivé en recliquant sur le même numéro de ligne. Par exemple, dans la figure suivante, les lignes 20 et 22 sont des points d'arrêt :
 \begin{figure}[h!]
 \raggedleft
 \includegraphics[width=0.9\linewidth]{pics/editeur_bkpt.png}
 \label{f:editeurbkpt}
-\caption{Un point d'arrêt (\textit{breakpoint}) peut être mis en place en cliquant sur le numéro de ligne, une fois le programme assemblé.}
+\caption{Un point d'arrêt (\textit{breakpoint}) peut être mis en place en cliquant sur le numéro de ligne.}
 \end{figure}
 
-\paragraph{\textbf{Note importante :}}un point d'arrêt ne peut être placé que sur une ligne \emph{contenant une instruction}. Si l'utilisateur clique sur une ligne ne contenant pas d'instructions, le point d'arrêt sera placé sur la prochaine ligne contenant une instruction. Par exemple, à la figure \ref{f:editeurbkpt}, cliquer sur la ligne 17 placera un point d'arrêt à la ligne \emph{18}.
+\paragraph{\textbf{Note importante :}}un point d'arrêt peut être placé sur n'importe qu'elle ligne si le programme n'est \emph{pas assemblé}. Une fois le programme \emph{assemblé} (le bouton ``Démarrer'' pressé et le code assemblé sans erreur), les points d'arrêt peuvent seulement être placé sur une ligne \emph{contenant une instruction} et les points d'arrêts invalides sont désactivés ou déplacé sur la prochaine ligne. Si l'utilisateur clique sur une ligne ne contenant pas d'instruction, le point d'arrêt sera placé sur la prochaine ligne contenant une instruction. Par exemple, à la figure \ref{f:editeurbkpt}, cliquer sur la ligne 17 placera un point d'arrêt à la ligne \emph{18}.
 
 Lors de l'exécution, l'éditeur passe en mode lecture seule. Il affiche cependant certaines informations. La ligne en cours d'exécution est surlignée en rouge bourgogne :
 \begin{figure}[h!]
@@ -162,9 +163,10 @@ Lorsque le bouton \textit{Démarrer} est pressé, le simulateur tente d'abord d'
 	\item \textbf{Arrêt} : interrompt la simulation et revient en mode édition.
 	\item \textbf{Réinitialisation} : effectue l'équivalent d'une interruption \emph{reset} sur le microprocesseur. La valeur de PC est mise à $0$. Notez que cela n'affecte \emph{pas} la valeur des autres registres et des drapeaux.
 	\item \textbf{Exécution en continu} : le simulateur exécute les instructions suivantes sans arrêt, jusqu'à ce qu'il rencontre une erreur ou un point d'arrêt. Notez que le simulateur est volontairement limité quant au nombre d'instructions qu'il peut exécuter d'un seul coup. Lorsque ce nombre est atteint, le simulateur arrête comme s'il avait rencontré un point d'arrêt. Il suffit d'appuyer à nouveau sur le bouton d'exécution en continu pour poursuivre.
-	\item \textbf{Exécuter instruction courante} : exécute l'instruction courante (celle qui est surlignée dans l'éditeur) et passe à la suivante puis arrête.
-	\item \textbf{Exécuter ligne courante} : dans le cas où la ligne courante est une instruction autre que BL, cette action a le même effet que la précédente. Toutefois, dans le cas d'un appel de fonction (BL), cette action exécute l'entièreté de la fonction jusqu'à son retour.
+    \item \textbf{Retour en arrière} : retourne en arrière d'une instruction. L'état du simulateur (les registres, la mémoire et les drapeaux) retourne comme elle était à l'instruction précédente puis arrête.
 	\item \textbf{Exécuter jusqu'à la sortie} : dans le cas où la ligne courante est dans une fonction, cette action exécute sans arrêt les instructions jusqu'à sortir de la fonction (appel de BX). Si la ligne courante n'est pas dans une fonction, cette action a le même effet qu'une exécution en continu.
+	\item \textbf{Exécuter ligne courante} : dans le cas où la ligne courante est une instruction autre que BL, cette action a le même effet que la précédente. Toutefois, dans le cas d'un appel de fonction (BL), cette action exécute l'entièreté de la fonction jusqu'à son retour.
+	\item \textbf{Exécuter instruction courante} : exécute l'instruction courante (celle qui est surlignée dans l'éditeur) et passe à la suivante puis arrête.
 \end{enumerate}
 
 \clearpage
@@ -317,6 +319,46 @@ Les lignes suivantes sont une description textuelle de l'instruction, générée
 
 
 \clearpage
+\subsection{Sauvegarde des sessions de travail}
+
+Les sessions sauvegardées permettent d'alterner entre plusieurs versions de code d'une même simulation. La session courante est sauvegardée automatiquement et restaurée au retour à la même simulation. 
+
+\begin{figure}[h!]
+\raggedleft
+\includegraphics[width=0.2\linewidth]{pics/session_button.png}
+\label{f:session_button}
+\caption{Boutton du menu latéral}
+\end{figure}
+
+Pour afficher le panneau des sessions sauvegardées, il faut survoler le bouton ``Sessions sauvegardées'' du menu latéral. 
+
+\begin{figure}[h!]
+\raggedleft
+\includegraphics[width=0.4\linewidth]{pics/session_control.png}
+\label{f:session_control}
+\caption{Contrôle des sessions sauvegardées}
+\end{figure}
+
+Trois bouton sont accessible pour modifier les sessions : 
+\begin{enumerate}     
+\item \textbf{Effacer} : la session courante est supprimée et la suivante est sélectionnée (son code est restauré).
+\item \textbf{Effacer tout} : toutes les sessions sont supprimées puis le code par défaut est restauré.
+\item \textbf{Nouvelle session} : la session courante est sauvegardée et une nouvelle session est ajouté en tête de la liste. Le code par défaut est restauré. 
+\end{enumerate}
+
+\begin{marginfigure}
+\includegraphics[width=\linewidth]{pics/session_open.png}
+\label{f:session_open}
+\caption{Vue des sessions sauvegardées avec la session numéro 2 de sélectionnée}
+\end{marginfigure}
+
+De plus, cliquer sur une session sauvegarde la session courante et restaure la session sélectionnée. La session en cours est affichée en bleu pour la différencier.
+
+Certaines informations sont affichées pour distinguer les différentes sessions. On y retrouve, le numéro de la session, l'heure de la dernière sauvegarde, la taille du code (en nombre de caractères) et le nom personnalité de la session. Un double-clic sur le nom permet de le modifier.
+
+\paragraph{\textbf{Note importante :}} malgré que ce procédé permet de sauvegardé son code même après la fermeture de votre navigateur, \textbf{il est fortement recommandé d'enregistrer (télécharger) votre code}. Les sauvegardes de sessions sont enregistrées dans la mémoire de votre navigateur et il n'y a aucune garantie que celle-ci ne sera pas effacée.   
+
+\clearpage
 \subsection{Contrôles d'enregistrement et de chargement}
 
 Ces contrôles, situés au bas de l'écran, vous permettent de télécharger le code présent dans l'éditeur et de charger un code présent sur votre ordinateur. Ces deux actions sont analogues à l'ouverture et l'enregistrement dans une application traditionnelle.
@@ -330,7 +372,7 @@ Ces contrôles, situés au bas de l'écran, vous permettent de télécharger le 
 
 N'importe quel type de fichier texte brut peut être lu par le simulateur. Nous vous recommandons toutefois d'utiliser l'extension ``txt'' afin d'éviter la confusion avec d'autres formats de fichier. C'est d'ailleurs cette extension que comportent les fichiers téléchargés depuis le simulateur.
 
-\paragraph{\textbf{Note importante :}} ces contrôles constituent la \emph{seule} manière de sauvegarder et réouvrir votre code. Il n'y a \emph{aucun} système de sauvegarde automatique et le serveur ne conserve \emph{aucune} trace du code exécuté. \textbf{Si vous ne téléchargez pas votre code avant de fermer votre navigateur ou de changer de page, les modifications que vous y avez apportées seront perdues et irrécupérables.} Un message d'avertissement vous est présenté lorsque vous tentez de fermer la fenêtre afin de vous rappelez de télécharger le fichier.
+\paragraph{\textbf{Note importante :}} malgré que votre code est sauvegardé automatiquement dans votre navigateur, \textbf{il est fortement recommandé de sauvegarder votre code} avec ces contrôles.
 
 \clearpage
 \subsection{Configuration}
